@@ -133,7 +133,7 @@ void gencgc_apply_code_fixups(struct code *old_code, struct code *new_code);
 
 sword_t update_dynamic_space_free_pointer(void);
 void gc_alloc_update_page_tables(int page_type_flag, struct alloc_region *alloc_region);
-void gc_alloc_update_all_page_tables(void);
+void gc_alloc_update_all_page_tables(int);
 void gc_set_region_empty(struct alloc_region *region);
 
 /*
