@@ -7,6 +7,8 @@ changes relative to sbcl-1.3.10:
     and ARM64. (lp#377616)
   * optimization: faster logical bit-array operations on multidimensional
     arrays.
+  * optimization: better GC performance in the presnece of lots threads.
+    (patch Ilya Perminov, lp#1339924)
   * bug fix: MAKE-ALIEN-STRING returns the number of allocated bytes as a
     second value as advertised (reported by Johann 'Myrkraverk' Oskarsson)
 
